# CodeNexus

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  MANUAL_REPO_QUEUE.md  PHILOSOPHY.md  README.md
.prompts/knowledge/: _TEMPLATE.md
.prompts/recipes/: _TEMPLATE.md
.prompts/system/: agentic-reviewer.md  best-practice-reviewer.md  code-extractor.md  code-refiner.md  openclaw-protocol.md  pr-opportunity-scorer.md  pr-reviewer.md  (+2 more)
docs/: claude-code-command-skill-plugin-convergence.md  claude-code-context-continuity-and-compaction.md  claude-code-permission-and-governance-model.md  claude-code-reusable-design-types.md  claude-code-skills-system-analysis.md  claude-code-study-map.md  claude-code-task-and-execution-topology.md  claude-code-tool-contract-and-schema-design.md  codenexus-artifact-model-proposal.md  codenexus-reusable-pattern-registry.md
scripts/: agentic_review_loop.py  openclaw_long_run.py  openclaw_repo_queue_pipeline.py  openclaw_runtime_verifier.py  openclaw_trending_pipeline.py  openclaw_watchdog.py  payload_models.py  script_support.py  setup.sh  sync-from-openclaw.sh  test_openclaw_trending_pipeline.py  validate.sh
starters/api-fastapi/: .gitignore  .meta.yml  Dockerfile  README.md  pyproject.toml
starters/api-fastapi/src/: config.py  dependencies.py  exceptions.py  main.py  middleware.py  models.py  repository.py  schemas.py
starters/api-fastapi/src/codenexus_api_fastapi.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
starters/api-fastapi/src/routes/: health.py  items.py
starters/api-fastapi/tests/: conftest.py  test_api.py
(+298 files in other folders)
